--- a/改进.md
+++ b/改进.md
@@ -3,3 +3,5 @@
 3 简单的增加和编辑表单尽量在弹出框里进行
 4 分页组件统一用一种形式
 5 表格单元格内的信息一行显示不开时统一采用省略号的形式，而不是让它自动换行，所以表格内信息默认加上title属性
+6 优先采用const 声明变量
+7 methods中如果this使用次数比较多,采用 const _self=this,减少原型链上的搜索,优化性能
